Updated server services routes. Fixed services layout. Installed react perfect scrollbar.

--- a/src/components/TopPanel/TopPanel.scss
+++ b/src/components/TopPanel/TopPanel.scss
@@ -16,6 +16,24 @@
   }
 
   .left-menu {
+    justify-content: unset;
+
+    .logo {
+      width: fit-content;
+      flex: unset;
+    }
+
+    .logo + div {
+      &:hover {
+        background: none;
+      }
+
+      .nav-link {
+        flex: unset;
+        padding: 0 5px;
+      }
+    }
+
     a, button {
       padding: 0 !important;
       outline: none;
